# llama-steering

./: .gitignore  README.md  pyproject.toml
examples/: acme_bank.yaml  mcdonalds.yaml  pirate.yaml  shakespeare.yaml
persona/: __init__.py  _upstream.py  calibration.py  chat.py  cli.py  config.py  eval_prompts.py  feature_search.py  judge.py  picker.py  sae_loader.py  sweep.py
personas/: burger_king.yaml
scripts/: DEMO_BURGER_KING.md  demo_burger_king.py
tests/: test_cli_sysprompt.py  test_feature_search.py  test_judge.py  test_persona_yaml.py  test_sweep.py
